--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -5,8 +5,7 @@
   
   on:
     push:
-      branches-ignore: [staging]
-      # Remove the line above to run when pushing to master
+      branches: [master]
     pull_request:
       branches: [master]
 
