--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,14 @@
 repos:
   - repo: git://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.31.0
+    rev: v1.45.0
     hooks:
       - id: terraform_fmt
-      - id: terraform_docs
+      - id: terraform_validate
+      - id: terraform_tflint
+      - id: checkov
   - repo: git://github.com/pre-commit/pre-commit-hooks
-    rev: v3.1.0
+    rev: v3.3.0
     hooks:
       - id: check-merge-conflict
+      - id: detect-aws-credentials
+      - id: detect-private-key
