--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,8 @@ repos:
     rev: v1.45.0
     hooks:
       - id: terraform_fmt
+      - id: terraform_docs_replace
+        args: ['--sort-by-required', '--dest=TERRAFORM.md']
       - id: terraform_validate
       - id: terraform_tflint
       - id: checkov
